--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -220,7 +220,7 @@
         android:layout_gravity="end"
         android:layout_marginEnd="@dimen/margin_end"
         android:layout_weight="1"
-        android:text="Made in KZ BY Katerin 😊"
+        android:text=""
         android:textSize="@dimen/text_size" />
 
 </LinearLayout>
